[package]
name = "tracing_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.27.0", default-features = false }
eframe = "0.27.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
